Http interface enhanced, possibility to choose front of back facing camera from the http interface, some code cleaning
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@176 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/less/accordion.less
+++ b/assets/www/less/accordion.less
@@ -1,5 +1,5 @@
-@startHeight: 50px;
-@endHeight: 357px;
+@startHeight: 45px;
+@endHeight: 340px;
 
 .accordion {
 
@@ -23,7 +23,7 @@
 	    height: @startHeight;
 	    clear: both;
 	    h1 {
-		line-height: 45px;
+		line-height: @startHeight - 4;
 	    }
 	}
 
