Bug fixes + an option to hide the notification
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@206 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -61,4 +61,15 @@
 
     </PreferenceCategory>
         
+	<PreferenceCategory 
+	    android:title="More options">
+	    
+		<CheckBoxPreference
+	        android:key="notification_enabled"
+	        android:title="Enable notification"
+	        android:defaultValue="true"
+	        android:summary="Enable/Disable the notification" />
+                    
+	</PreferenceCategory>                    
+        
 </PreferenceScreen>
