AAC support improved. Little bug fix in H264Packetizer.
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@213 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -25,6 +25,7 @@
     
     <!-- RESOLUTION -->
     <string-array name="videoResolutionArray">
+        <item>1280x720</item>
         <item>640x480</item>
         <item>320x240</item>
         <item>176x144</item>
