Three new sounds. Bug fix in Session.java. Multicast seems ready but still needs testing. Some improvements in the HTTP UI.
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@220 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/less/base.less
+++ b/assets/www/less/base.less
@@ -1,6 +1,6 @@
-
 @grayDark: #333;
 @baseFontSize: 13px;
+@baseLetterSpacing: 1px;
 @baseFontFamily: "Bangers", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @baseLineHeight: 19px;
 @textColor: #EEE;
@@ -34,6 +34,7 @@ body {
     width: 1180px - 235px;
     font-family: @baseFontFamily;
     font-size: @baseFontSize;
+    letter-spacing: @baseLetterSpacing;
     color: @textColor;
     line-height: @baseLineHeight;
     text-shadow: 0px 0px 3px black,0px 0px 3px black;
@@ -98,31 +99,13 @@ header {
 }
 
 
-#facebook {
+#social-networks {
     position: fixed;
     left: 10px;
     top: 10px;
-    width: 180px;
+    width: 200px;
     height: 60px;
-    .transition(opacity 0.4s);
-    opacity: 0.3;
-    img {
-	float: left;
-	width: 60px;
-	height: 60px;
-    }
-    p {
-	padding: 10px;
-	float: left;
-    }
-    a {
-	text-decoration: none;
-    }
 }
-#facebook:hover {
-    opacity: 1;
-}
-
 
 #right-bar {
     float: left;
@@ -167,7 +150,7 @@ section {
     }
 
     #soundslist {
-	padding-top: 20px;
+	padding-top: 1px;
 	.category {
 	    margin: auto;
 	    width: 190px;
@@ -175,7 +158,7 @@ section {
 	    padding-top: 10px;
 	}
 	.category-name {
-
+	    color: rosybrown;
 	}
 	.category-separator {
 	    border-top: 1px solid black;
@@ -209,7 +192,7 @@ section {
 	span {
 	    .transition(opacity 0.3s, color 0.3s);
 	    font-size: 18px;
-	    padding: 15px;
+	    padding: 15px 10px 15px 0px;
 	    display: block;
 	    margin-left:40px;
 	    filter: alpha(opacity=100);
@@ -352,19 +335,40 @@ footer {
 	list-style-type: none;
     }
     >div {
-	.box-shadow(0px 0px 2px rgba(0,0,0,.25));
-	text-align: center;
-	.border-radius(10px);
-	padding: 10px;
+	.box-shadow(0px 0px 2px rgba(0,0,0,.65));
+	text-align: left;
+	.border-radius(2px);
 	background: rgba(255,255,255,0.1);
 	margin-bottom: 20px;
+	>div {
+	    margin: 24px auto;
+	    width: 600px;
+	    >div {
+		width: 270px;
+	    }
+	    >div:nth-child(1) {
+		float: left;
+	    }
+	    >div:nth-child(2) {
+		float: right;
+	    }
+
+	}
     }
     a{
 	color: white;
     }
+    #sounds {
+	min-height: 230px;
+    }
     #logo {
-	text-align: center;
+	padding-top: 1px;
+	min-height: 140px;
 	img {
+	    margin-right: 25px;
+	    float: left;
+	    width: 100px;
+	    height: 100px;
 	    display: inline;
 	}
     }
