More complete french translation. Some bug fixes in the HTTP interface. Bug fix: sometimes the HTTP server & the RTSP server could be stopped when the app was running in background.
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@230 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -61,6 +61,8 @@
     </string-array>
 
     <string-array name="videoBitrateValues">
+        <item>5000</item>
+        <item>2000</item>
         <item>1000</item>
         <item>700</item>
         <item>500</item>
