--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -194,15 +194,14 @@
 		      android:layout_alignParentLeft="true"
 		      android:orientation="vertical" >
 
-		      <!-- <com.google.ads.AdView
-		          android:id="@+id/adView"
+		      <com.google.ads.AdView
 		          android:layout_width="match_parent"
 		          android:layout_height="wrap_content"
 		          ads:adSize="BANNER"
 		          ads:adUnitId="a1503ac1fd4e2ac"
 		          ads:loadAdOnCreate="true"
 		          ads:testDevices="TEST_EMULATOR, 0019d431063b5e, BX9033M47E" >
-		      </com.google.ads.AdView> -->
+		      </com.google.ads.AdView>
 
 		  </LinearLayout>
     
