Tablet version, do not work with android 3, unstable :(

--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -17,9 +17,9 @@
             android:textColor="@android:color/white"
             android:textSize="19dp" />
         
-        <LinearLayout 
+        <LinearLayout
             android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         
@@ -48,7 +48,7 @@
 
 		<LinearLayout 
             android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 	         
@@ -78,7 +78,7 @@
          
 		<LinearLayout 
             android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 	         
@@ -107,7 +107,7 @@
 		 
 		<LinearLayout 
             android:orientation="horizontal"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 	         
