--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/options"
-          android:icon="@drawable/options"
+          android:icon="@drawable/settings"
           android:title="@string/options" />
-    <!--  <item android:id="@+id/client"
-          android:icon="@drawable/options"
-          android:title="@string/client" />  -->
     <item android:id="@+id/quit"
           android:icon="@drawable/quit"
           android:title="@string/quit" />
