Android 2.3 correctly supported with new ui. User can change port from settings. New class SessionManager.

--- a/res/layout-sw600dp/preview.xml
+++ b/res/layout-sw600dp/preview.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent" >    
     
    <SurfaceView
-        android:id="@+id/cameraview"
+        android:id="@+id/tablet_camera_view"
         android:background="@drawable/preview"
         android:layout_margin="20dp"
         android:layout_width="match_parent"
