--- a/res/layout/preview.xml
+++ b/res/layout/preview.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#001629"
+    android:background="@android:color/transparent"
     android:layout_height="match_parent" >    
     
-   <SurfaceView
-        android:id="@+id/cameraview"
+   <View
         android:background="@drawable/preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
+        android:layout_height="match_parent" />
     
 </RelativeLayout>
