--- a/res/layout/spydroid.xml
+++ b/res/layout/spydroid.xml
@@ -1,23 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/handset_pager"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SpydroidActivity">
+    android:layout_height="wrap_content" >
 
-    <!--
+    <SurfaceView
+        android:id="@+id/handset_camera_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center" />
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/handset_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/adcontainer"
+            android:background="@android:color/transparent"
+            android:layout_alignParentTop="true"
+            tools:context=".SpydroidActivity" >
+
+            <!--
     This title strip will display the currently visible page title, as well as the page
     titles for adjacent pages.
-    -->
-    <android.support.v4.view.PagerTitleStrip android:id="@+id/pager_title_strip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:padding="10dp"
-        android:background="#001629"
-        android:textColor="#fff"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp" />
+            -->
 
-</android.support.v4.view.ViewPager>
+            <android.support.v4.view.PagerTitleStrip
+                android:id="@+id/pager_title_strip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:background="#001629"
+                android:padding="10dp"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="#fff" />
+        </android.support.v4.view.ViewPager>
+
+        <LinearLayout
+            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/adcontainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical" >
+
+            <com.google.ads.AdView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                ads:adSize="SMART_BANNER"
+                ads:adUnitId="a1503ac1fd4e2ac"
+                ads:loadAdOnCreate="true"
+                ads:testDevices="TEST_EMULATOR" >
+            </com.google.ads.AdView>
+        </LinearLayout>
+    </RelativeLayout>
+    
+</FrameLayout>
