--- a/assets/www/less/base.less
+++ b/assets/www/less/base.less
@@ -44,28 +44,28 @@ body {
     letter-spacing: @baseLetterSpacing;
 
     h1,h2,h3,h4 {
-	font-weight: normal;
-	display: block;
-	padding: 0;
-	margin: 0;
+	     font-weight: normal;
+	     display: block;
+	     padding: 0;
+	     margin: 0;
     }
     h1 {
-	line-height: 50px;
-	text-align: center;
-	font-size: 1.3em;
+	     line-height: 50px;
+	     text-align: center;
+	     font-size: 1.3em;
     }
     h2 {
-	font-size: 1.8em;
-	line-height: 1.5em;
-	text-align: center;
+	     font-size: 1.8em;
+	     line-height: 1.5em;
+	     text-align: center;
     }
     h3 {
-	font-size: 1.2em;
-	text-align: center;
+	     font-size: 1.2em;
+	     text-align: center;
     }
     em {
-    	font-family: "Sunshiney", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    	font-size: 18px;
+    	  font-family: "Sunshiney", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    	  font-size: 18px;
     }
 }
 
@@ -75,23 +75,23 @@ body:lang(ru) {
     font-size: 13px;
 
     h1 {
-	line-height: 50px;
-	text-align: center;
-	font-size: 1.1em;
-	font-weight: bold;
+	     line-height: 50px;
+	     text-align: center;
+	     font-size: 1.1em;
+	     font-weight: bold;
     }
     h2 {
-	font-size: 1.8em;
-	line-height: 1.5em;
-	text-align: center;
+	     font-size: 1.8em;
+	     line-height: 1.5em;
+	     text-align: center;
     }
     h3 {
-	font-size: 1.2em;
-	text-align: center;
+	     font-size: 1.2em;
+	     text-align: center;
     }
     em {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 1.1em;
+	     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	     font-size: 1.1em;
     }
 }
 
@@ -132,9 +132,9 @@ header {
     height: 150px;
     text-align: center;
     img {
-	display: block;
-	clear: both;
-	margin: auto;
+	     display: block;
+	     clear: both;
+	     margin: auto;
     }
 }
 
@@ -168,9 +168,9 @@ header {
     text-align: center;
     margin-top: 6px;
     span {
-	text-decoration: underline;
-	cursor: pointer;
-	font-size: 0.9em;
+	     text-decoration: underline;
+	     cursor: pointer;
+	     font-size: 0.9em;
     }
 }
 
@@ -180,87 +180,97 @@ section {
     .disableselection();
 
     #torch-button {
-	.transition(opacity 0.3s);
-	display: block;
-	margin: 20px auto;
-	filter: alpha(opacity=20);
-	opacity: 0.2;
-	clear: both;
+	     .transition(opacity 0.3s);
+	     display: block;
+	     margin: 15px auto;
+	     filter: alpha(opacity=20);
+	     opacity: 0.2;
+	     clear: both;
     }
 
     #torch-button.torch-on {
-	filter: alpha(opacity=100);
-	opacity: 1;
+	     filter: alpha(opacity=100);
+	     opacity: 1;
     }
 
-    #torch-desc {
-	display: block;
-	padding: 20px;
-	text-align: center;
-	text-decoration: underline;
+    #buzz-button {
+	     .transition(opacity 0.3s);
+	     display: block;
+	     margin: 5px auto;
+	     filter: alpha(opacity=20);
+	     opacity: 0.2;
+	     clear: both;
+    }
+
+
+    .action-desc {
+	     display: block;
+	     padding: 0px 20px;
+	     text-align: center;
+	     text-decoration: underline;
     }
 
     #soundslist {
-	padding-top: 1px;
-	text-transform: capitalize;
-	.category {
-	    margin: auto;
-	    width: 190px;
-	    clear: both;
-	    padding-top: 10px;
-	}
-	.category-name {
-	    color: rosybrown;
-	}
-	.category-separator {
-	    border-top: 1px solid black;
-	    opacity: 0.1;
-	    filter: alpha(opacity=10);
-	    clear: both;
-	}
-	.sound {
-	    width: 50%;
-	    float: left;
-	    margin-top: 5px;
-	    text-align: center;
-	}
+	     padding-top: 1px;
+	     text-transform: capitalize;
+	     .category {
+	         margin: auto;
+	         width: 190px;
+	         clear: both;
+	         padding-top: 10px;
+	     }
+	     .category-name {
+	         color: rosybrown;
+	     }
+	     .category-separator {
+	         border-top: 1px solid black;
+	         opacity: 0.1;
+	         filter: alpha(opacity=10);
+	         clear: both;
+	     }
+	     .sound {
+	         width: 50%;
+	         float: left;
+	         margin-top: 5px;
+	         text-align: center;
+	     }
     }
 
     #cameras {
-	.section-content {
-	    padding-top: 40px;
-	}
-	span:nth-child(1) {
-	    .transform(rotate(-35deg));
-	}
-	span:nth-child(2) {
-	    .transform(rotate(-30deg));
-	}
-	span {
-	    .transition(opacity 0.3s, color 0.3s);
-	    font-size: 1.3em;
-	    padding: 15px 10px 15px 0px;
-	    display: block;
-	    margin-left:40px;
-	    filter: alpha(opacity=100);
-	    opacity: 1.0;
-	}
-	span.camera-not-selected {
-	    filter: alpha(opacity=20);
-	    opacity: 0.2;	    
-	}
-	span.camera-not-selected:hover {
-	    filter: alpha(opacity=100);
-	    opacity: 1.0;	    
-	    color: lighten(red,20%);
-	}
-	img {
-	    display: block;
-	    margin: 30px auto;
-	    filter: alpha(opacity=20);
-	    opacity: 0.2;
-	    clear: both;	
-	}
+	     .section-content {
+	         padding-top: 40px;
+	     }
+	     span:nth-child(1) {
+	         .transform(rotate(-35deg));
+	     }
+	     span:nth-child(2) {
+	         .transform(rotate(-30deg));
+	     }
+	     span {
+	         .transition(opacity 0.3s, color 0.3s);
+	         font-size: 1.3em;
+	         padding: 15px 10px 15px 0px;
+	         display: block;
+	         margin-left:40px;
+	         filter: alpha(opacity=100);
+	         opacity: 1.0;
+	     }
+	     span.camera-not-selected {
+	         filter: alpha(opacity=20);
+	         opacity: 0.2;	    
+	     }
+	     span.camera-not-selected:hover {
+	         filter: alpha(opacity=100);
+	         opacity: 1.0;	    
+	         color: lighten(red,20%);
+	     }
+	     img {
+	         display: block;
+	         margin: 30px auto;
+	         filter: alpha(opacity=20);
+	         opacity: 0.2;
+	         clear: both;	
+	     }
     }
 
 }
@@ -296,20 +306,20 @@ section {
     padding-top: 50px;
 
     #content {
-	margin: 130px 10px 10px 30px;
-	float: left;
-	width: 200px;
+	     margin: 130px 10px 10px 30px;
+	     float: left;
+	     width: 200px;
     }
 
     #close {
-	position: absolute;
-	bottom: 10px;
-	left: 0px;
-	width: 100%;
+	     position: absolute;
+	     bottom: 10px;
+	     left: 0px;
+	     width: 100%;
     }
 
     img {
-	.box-shadow(3px 3px 15px rgba(0,0,0,.75));
+	     .box-shadow(3px 3px 15px rgba(0,0,0,.75));
     }
 
 }
@@ -323,11 +333,11 @@ section {
     width: 600px;
     height: 420px;
     h3 {
-	margin-top: 15px;
+	     margin-top: 15px;
     }
     img {
-    	float: right;
-	margin: 60px 15px 10px 10px;
+    	  float: right;
+	     margin: 60px 15px 10px 10px;
     }
 }
 
@@ -336,74 +346,74 @@ footer {
     margin-top: 30px;
 
     #connect {
-	>div {
-	    cursor: pointer;
-	    position: absolute;
-	    background: url('../images/red-button.png');
-	    width: 344px;
-	    height:56px;
-	    z-index: 1;
-	}
-	clear: both;
-	width: 344px;
-	height:56px;
-	margin: auto;
+	     >div {
+	         cursor: pointer;
+	         position: absolute;
+	         background: url('../images/red-button.png');
+	         width: 344px;
+	         height:56px;
+	         z-index: 1;
+	     }
+	     clear: both;
+	     width: 344px;
+	     height:56px;
+	     margin: auto;
     }
     
     #status-container {
-	background: rgba(7,63,131,0.2);
-	width: 280px;
-	height: 40px;
-	margin: -10px auto;
-	text-align: center;
-	line-height: 49px;
+	     background: rgba(7,63,131,0.2);
+	     width: 280px;
+	     height: 40px;
+	     margin: -10px auto;
+	     text-align: center;
+	     line-height: 49px;
     }
 
 }
 
 #credits {
     ul {
-	margin: 0px;
-	padding: 0px;
-	list-style-type: none;
+	     margin: 0px;
+	     padding: 0px;
+	     list-style-type: none;
     }
     >div {
-	.box-shadow(0px 0px 2px rgba(0,0,0,.65));
-	text-align: left;
-	.border-radius(2px);
-	background: rgba(255,255,255,0.1);
-	margin-bottom: 20px;
-	>div {
-	    margin: 24px auto;
-	    width: 600px;
-	    >div {
-		width: 270px;
-	    }
-	    >div:nth-child(1) {
-		float: left;
-	    }
-	    >div:nth-child(2) {
-		float: right;
-	    }
+	     .box-shadow(0px 0px 2px rgba(0,0,0,.65));
+	     text-align: left;
+	     .border-radius(2px);
+	     background: rgba(255,255,255,0.1);
+	     margin-bottom: 20px;
+	     >div {
+	         margin: 24px auto;
+	         width: 600px;
+	         >div {
+		          width: 270px;
+	         }
+	         >div:nth-child(1) {
+		          float: left;
+	         }
+	         >div:nth-child(2) {
+		          float: right;
+	         }
 
-	}
+	     }
     }
     a{
-	color: white;
+	     color: white;
     }
     #sounds {
-	min-height: 230px;
+	     min-height: 230px;
     }
     #logo {
-	padding-top: 1px;
-	min-height: 140px;
-	img {
-	    margin-right: 25px;
-	    float: left;
-	    width: 100px;
-	    height: 100px;
-	    display: inline;
-	}
+	     padding-top: 1px;
+	     min-height: 140px;
+	     img {
+	         margin-right: 25px;
+	         float: left;
+	         width: 100px;
+	         height: 100px;
+	         display: inline;
+	     }
     }
 }
 
@@ -418,29 +428,40 @@ footer {
     // .border-radius(10px);
 
     >div {
-	display: none;
+	     display: none;
     }
 
     #sounds {
-	display: block;
+	     display: block;
     }
 
     #title {
-	text-align: center;
-	margin: 20px;
+	     text-align: center;
+	     margin: 20px;
     }
 
     #content {
-	padding: 0 20px 20px 20px;
-	text-align: justify;
+	     padding: 0 20px 20px 20px;
+	     text-align: justify;
     }
 
     #hide-tooltip {
-	display: block;
-	text-align: center;
-	margin-bottom: 15px;
-	text-decoration: underline;
-	cursor: pointer;
+	     display: block;
+	     text-align: center;
+	     margin-bottom: 15px;
+	     text-decoration: underline;
+	     cursor: pointer;
     }
 
+}
+
+#battery {
+
+	 position: absolute;
+	 z-index: -1;
+	 bottom: -25px;
+	 left: 130px;
+	 padding: 5px 20px 4px 20px;
+	 background: rgba(7, 63, 131, 0.2);
+    
 }
